--- a/app/src/main/res/layout/tab1.xml
+++ b/app/src/main/res/layout/tab1.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="MENU"
+        android:text="Tab1"
         android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 </RelativeLayout>
